--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       </div>
     </div>
     <div id="pregamePage" class="container">
+
+    </div>
+    <div id="postgamePage" class="container">
       
     </div>
 
