--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
         <div class="row">
           Stats
         </div>
+        <div class="col-6">
+          <button onclick="teamStatsNav()" class="bttn-minimal bttn-sm bttn-success">Team</button>
+        </div>
+        <div class="col-6">
+          <button onclick="playerStatsNav()" class="bttn-minimal bttn-sm bttn-success">Player</button>
+        </div>
+        <div class="container" id="teamStatsCont">
+          <div class="row">
+            Team
+          </div>
+
+        </div>
+        <div class="container" id="playerStatsCont">
+          <div class="row">
+            Player
+          </div>
+
+        </div>
       </div>
       <div class="container" id="rotationCont">
         <div class="row">
@@ -48,7 +66,7 @@
 
     </div>
     <div id="postgamePage" class="container">
-      
+
     </div>
 
 
