--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
         <div class="row">
           Stats
         </div>
-        <div class="col-6">
-          <button onclick="teamStatsNav()" class="bttn-minimal bttn-sm bttn-success">Team</button>
-        </div>
-        <div class="col-6">
-          <button onclick="playerStatsNav()" class="bttn-minimal bttn-sm bttn-success">Player</button>
+        <div class="row">
+          <div class="col-6">
+            <button onclick="teamStatsNav()" class="bttn-minimal bttn-sm bttn-success">Team</button>
+          </div>
+          <div class="col-6">
+            <button onclick="playerStatsNav()" class="bttn-minimal bttn-sm bttn-success">Player</button>
+          </div>
         </div>
         <div class="container" id="teamStatsCont">
           <div class="row">
