--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       </div>
       <div class="container" id="statsCont">
         <div class="row">
-          Stats
+      
         </div>
-        <div class="row">
+        <div class="row text-center">
           <div class="col-6">
             <button onclick="teamStatsNav()" class="bttn-minimal bttn-sm bttn-success">Team</button>
           </div>
